Fix a layout bug

--- a/style.css
+++ b/style.css
@@ -10,5 +10,8 @@
 
 body{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15vh;
+    gap: 10vh;
 }
